# mesh2motion_flutter

./: README.md  pubspec.yaml
.lib/: main.dart
.lib/engine/: m2m_engine.dart  m2m_resources.dart
.lib/screens/: editor_screen.dart
.lib/widgets/: bottom_timeline.dart  busy_overlay.dart  left_panel.dart  right_panel.dart  viewport_overlay.dart
.reference/: README.md  README_CN.md  __init__.py  nodes.py  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.mts
.reference/js/: main.js  main.js.map
.reference/mesh2motion-ui/: create-comfyui-window.html  index-comfyui-window.html  index-comfyui.html  retarget-comfyui.html
.reference/mesh2motion-ui/assets/: dialog-C4NDzct4.css
.reference/src/: capture.ts  dialog.ts  explore-widget.ts  main.ts  utils.ts
android/: local.properties
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
lib/engine/: m2m_engine.dart  m2m_view.dart
lib/models/: editor_state.dart
lib/screens/: editor_screen.dart
lib/services/: mesh2motion_scene.dart
lib/theme/: app_theme.dart
lib/widgets/: right_panel.dart  top_toolbar.dart  viewport_overlay.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
web/: index.html  manifest.json
