[project]
name = "comfyui-mesh2motion"
description = "Integrates Mesh2motion into ComfyUI for 3D model animation rigging"
version = "1.1.0"
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.urls]
Repository = "https://github.com/jtydhr88/ComfyUI-mesh2motion"

[tool.comfy]
PublisherId = "jtydhr88"
DisplayName = "Comfyui Mesh2Motion"
Icon = ""
includes = ['js', 'mesh2motion-ui', 'camera-preset-pack', 'locales']
